@@ -6,6 +6,10 @@ Branch 0.13 (unreleased changes)
  1. HADOOP-1623.  Fix an infinite loop when copying directories into
     themselves.  (Dhruba Borthakur via cutting)
 
+ 2. HADOOP-1603.  Fix a bug in namenode initialization where
+    default replication is sometimes reset to one on restart.
+    (Raghu Angadi via cutting)
+
 
 Release 0.13.0 - 2007-06-08
 
